--- a/2-Regression/4-Logistic/notebook.ipynb
+++ b/2-Regression/4-Logistic/notebook.ipynb
@@ -13,209 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>City Name</th>\n",
-       "      <th>Type</th>\n",
-       "      <th>Package</th>\n",
-       "      <th>Variety</th>\n",
-       "      <th>Sub Variety</th>\n",
-       "      <th>Grade</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Low Price</th>\n",
-       "      <th>High Price</th>\n",
-       "      <th>Mostly Low</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Unit of Sale</th>\n",
-       "      <th>Quality</th>\n",
-       "      <th>Condition</th>\n",
-       "      <th>Appearance</th>\n",
-       "      <th>Storage</th>\n",
-       "      <th>Crop</th>\n",
-       "      <th>Repack</th>\n",
-       "      <th>Trans Mode</th>\n",
-       "      <th>Unnamed: 24</th>\n",
-       "      <th>Unnamed: 25</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>BALTIMORE</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>24 inch bins</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4/29/17</td>\n",
-       "      <td>270.0</td>\n",
-       "      <td>280.0</td>\n",
-       "      <td>270.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>E</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>BALTIMORE</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>24 inch bins</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5/6/17</td>\n",
-       "      <td>270.0</td>\n",
-       "      <td>280.0</td>\n",
-       "      <td>270.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>E</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>BALTIMORE</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>24 inch bins</td>\n",
-       "      <td>HOWDEN TYPE</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9/24/16</td>\n",
-       "      <td>160.0</td>\n",
-       "      <td>160.0</td>\n",
-       "      <td>160.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>N</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>BALTIMORE</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>24 inch bins</td>\n",
-       "      <td>HOWDEN TYPE</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9/24/16</td>\n",
-       "      <td>160.0</td>\n",
-       "      <td>160.0</td>\n",
-       "      <td>160.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>N</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>BALTIMORE</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>24 inch bins</td>\n",
-       "      <td>HOWDEN TYPE</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>11/5/16</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>N</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 26 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   City Name Type       Package      Variety Sub Variety  Grade     Date  \\\n",
-       "0  BALTIMORE  NaN  24 inch bins          NaN         NaN    NaN  4/29/17   \n",
-       "1  BALTIMORE  NaN  24 inch bins          NaN         NaN    NaN   5/6/17   \n",
-       "2  BALTIMORE  NaN  24 inch bins  HOWDEN TYPE         NaN    NaN  9/24/16   \n",
-       "3  BALTIMORE  NaN  24 inch bins  HOWDEN TYPE         NaN    NaN  9/24/16   \n",
-       "4  BALTIMORE  NaN  24 inch bins  HOWDEN TYPE         NaN    NaN  11/5/16   \n",
-       "\n",
-       "   Low Price  High Price  Mostly Low  ...  Unit of Sale Quality Condition  \\\n",
-       "0      270.0       280.0       270.0  ...           NaN     NaN       NaN   \n",
-       "1      270.0       280.0       270.0  ...           NaN     NaN       NaN   \n",
-       "2      160.0       160.0       160.0  ...           NaN     NaN       NaN   \n",
-       "3      160.0       160.0       160.0  ...           NaN     NaN       NaN   \n",
-       "4       90.0       100.0        90.0  ...           NaN     NaN       NaN   \n",
-       "\n",
-       "  Appearance Storage  Crop Repack  Trans Mode  Unnamed: 24  Unnamed: 25  \n",
-       "0        NaN     NaN   NaN      E         NaN          NaN          NaN  \n",
-       "1        NaN     NaN   NaN      E         NaN          NaN          NaN  \n",
-       "2        NaN     NaN   NaN      N         NaN          NaN          NaN  \n",
-       "3        NaN     NaN   NaN      N         NaN          NaN          NaN  \n",
-       "4        NaN     NaN   NaN      N         NaN          NaN          NaN  \n",
-       "\n",
-       "[5 rows x 26 columns]"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -224,11 +24,237 @@
     "\n",
     "full_pumpkins.head()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns_to_select = ['City Name', 'Package', 'Variety', 'Origin', 'Item Size', 'Color']\n",
+    "pumpkins = full_pumpkins.loc[:,columns_to_select]\n",
+    "\n",
+    "pumpkins.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "\n",
+    "palette = {\n",
+    "    'ORANGE': 'orange',\n",
+    "    'WHITE': 'wheat'\n",
+    "}\n",
+    "\n",
+    "sns.catplot(\n",
+    "    data=pumpkins, y='Variety', hue='Color', kind='count',\n",
+    "    palette=palette\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import OrdinalEncoder\n",
+    "\n",
+    "item_size_categories = [['sml', 'med', 'med-lge', 'lge', 'xlge', 'jbo', 'exjbo']]\n",
+    "ordinal_features = ['Item Size']\n",
+    "ordinal_encoder = OrdinalEncoder(categories=item_size_categories)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "\n",
+    "categorical_features = ['City Name', 'Package', 'Variety', 'Origin']\n",
+    "categorical_encoder = OneHotEncoder(sparse_output=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.compose import ColumnTransformer\n",
+    "\n",
+    "ct = ColumnTransformer(transformers=[\n",
+    "    ('ord', ordinal_encoder, ordinal_features),\n",
+    "    ('cat', categorical_encoder, categorical_features)\n",
+    "], remainder=\"drop\")\n",
+    "\n",
+    "ct.set_output(transform='pandas')\n",
+    "encoded_features = ct.fit_transform(pumpkins)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "label_encoder = LabelEncoder()\n",
+    "encoded_label = label_encoder.fit_transform(pumpkins['Color'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoded_pumpkins = encoded_features.assign(Color=encoded_label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "palatte = {\n",
+    "    'ORANGE': 'orange',\n",
+    "    'WHITE': 'wheat'\n",
+    "}\n",
+    "pumpkins['Item Size'] = encoded_pumpkins['ord__Item Size']\n",
+    "\n",
+    "g = sns.catplot(\n",
+    "    data=pumpkins,\n",
+    "    x='Item Size', y='Color', row='Variety',\n",
+    "    kind='box', orient='h',\n",
+    "    sharex=False, margin_titles=True,\n",
+    "    height=1.8, aspect=4, palette=palette\n",
+    ")\n",
+    "g.set(xlabel='Item Size', ylabel='').set(xlim=(0,6))\n",
+    "g.set_titles(row_template=\"{row_name}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X = encoded_pumpkins[encoded_pumpkins.columns.difference(['Color'])]\n",
+    "y = encoded_pumpkins['Color']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X.shape[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import f1_score, classification_report\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "model = LogisticRegression()\n",
+    "model.fit(X_train,y_train)\n",
+    "predictions = model.predict(X_test)\n",
+    "\n",
+    "print(classification_report(y_test,predictions))\n",
+    "print('Predicted labels: ', predictions)\n",
+    "print('F1_score: ', f1_score(y_test,predictions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "confusion_matrix(y_test,predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import roc_curve, roc_auc_score\n",
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "\n",
+    "y_scores = model.predict_proba(X_test)\n",
+    "fpr, tpr, thresolds = roc_curve(y_test, y_scores[:,1])\n",
+    "\n",
+    "fig = plt.figure(figsize=(6,6))\n",
+    "plt.plot([0,1], [0,1], 'k--')\n",
+    "plt.plot(fpr, tpr)\n",
+    "plt.xlabel('False positive rate')\n",
+    "plt.ylabel('True positive rate')\n",
+    "plt.title('ROC curve')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "auc = roc_auc_score(y_test, y_scores[:,1])\n",
+    "print(auc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "model_filename = 'pumpkins-model.pkl'\n",
+    "pickle.dump(model, open(model_filename, 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"pumpkins-preprocessor.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(ct, f)\n",
+    "    \n",
+    "with open(\"pumpkins-label-encoder.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(label_encoder, f)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv (3.13.5)",
    "language": "python",
    "name": "python3"
   },
@@ -242,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.13.5"
   },
   "metadata": {
    "interpreter": {
